--- a/config/application.yml
+++ b/config/application.yml
@@ -9,5 +9,10 @@
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
-facebook_app_id: 1585710125052191
+facebook_app_id: "1585710125052191"
 facebook_app_secret: 22c3ceb8709be903f2148e762c2801a3
+
+AWS_BUCKET: "mypairbnbpictures"
+AWS_ACCESS_KEY_ID: "AKIAJGZJZWTAK5XX4USQ"
+AWS_SECRET_ACCESS_KEY: "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"
+AWS_REGION: "ap-southeast-1"
